CORE-8337: Upgrade to Kryo 5.4.0. (#133)
* Upgrade to Kryo 5.4.0.
* Workaround for Kryo 5.x optimisation concerning Collections and Object[].
* Add more default serializers which Kryo 5 does not include automatically.
* Ensure CollectionSerializerAdapter uses its own privileges for private lookup.
* Update build so tests can pass on Java 17.
* Build for Java 11, but test with Java 17.