@@ -18,7 +18,7 @@ subprojects {
 
     java {
         toolchain {
-            languageVersion = of(11)
+            languageVersion = of(testJavaVersion)
 
             // Configure Gradle to use IBM J9 JDK toolchain.
             // (You will need to install J9 manually first.)
@@ -31,6 +31,7 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
+        options.release = targetJavaVersion.toInteger()
     }
 
     tasks.withType(GenerateModuleMetadata).configureEach {
@@ -54,13 +55,6 @@ subprojects {
     ext.baselib         = "${rootProject.projectDir}/baselib"
     ext.quasarJar = "${rootDir}/quasar-core/build/libs/quasar-core-${version}.jar" // project(':quasar-core').jar.archivePath
 
-    ext.drpWizVer = '4.1.0'
-    ext.guavaVer  = '30.1.1-jre'
-    ext.slf4jVer  = '1.7.36'
-    ext.osgiAnnotationVer = '8.1.0'
-    ext.osgiCoreVer       = '8.0.0'
-    ext.osgiComponentVer  = '1.5.0'
-
     if (!project.hasProperty('mainClass')) { // must use project.hasProperty() rather than hasProperty in subprojects (gradle bug)
         ext.mainClass = ''
     }
@@ -80,11 +74,11 @@ subprojects {
     configurations.configureEach {
         resolutionStrategy {
             dependencySubstitution {
-                // Kryo demands Objenesis 2.5.1, but Mockito wants Objenesis 2.6
-                substitute module('org.objenesis:objenesis') using module("org.objenesis:objenesis:2.5.1")
+                // Kryo demands Objenesis 3.3, but Mockito wants Objenesis 2.6
+                substitute module('org.objenesis:objenesis') using module("org.objenesis:objenesis:3.3")
 
                 // Avoid problem when DropWizard and Log4J ask for different versions of SLF4J.
-                substitute module('org.slf4j:slf4j-api') using module("org.slf4j:slf4j-api:$slf4jVer")
+                substitute module('org.slf4j:slf4j-api') using module("org.slf4j:slf4j-api:$slf4jVersion")
             }
         }
     }
@@ -116,17 +110,17 @@ subprojects {
         constraints {
             compileOnly('org.osgi:osgi.annotation') {
                 version {
-                    strictly osgiAnnotationVer
+                    strictly osgiAnnotationVersion
                 }
             }
             compileOnly('org.osgi:osgi.core') {
                 version {
-                    strictly osgiCoreVer
+                    strictly osgiCoreVersion
                 }
             }
             compileOnly('org.osgi:org.osgi.service.component.annotations') {
                 version {
-                    strictly osgiComponentVer
+                    strictly osgiServiceComponentVersion
                 }
             }
         }
@@ -145,7 +139,7 @@ subprojects {
             exclude group: "net.bytebuddy", module: '*'
         }
         testRuntimeOnly "net.bytebuddy:byte-buddy:1.9.2" // for Mockito
-        testRuntimeOnly("com.google.guava:guava:$guavaVer") {
+        testRuntimeOnly("com.google.guava:guava:$guavaVersion") {
             exclude group: 'com.google.errorprone', module: '*'
             exclude group: 'org.checkerframework', module: 'checker-qual'
         }
@@ -178,12 +172,19 @@ subprojects {
 
     tasks.named('test', Test) {
         dependsOn tasks.named('jar', Jar)
+
+        // Quasar needs reflective access to these packages.
+        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+                '--illegal-access=warn'
     }
 
     tasks.withType(Test).configureEach {
         useJUnit()
 
-        if (project.name != 'quasar-kotlin' && !project.name.contains('osgi')) {
+        if (project.name != 'quasar-kotlin'
+              && project.name != 'kryo-serializers'
+              && !project.name.contains('osgi')) {
             moduleOptions {
                 runOnClasspath = true
             }
@@ -474,8 +475,8 @@ project (':quasar-core') {
     }
 
     dependencies {
-        implementation "io.dropwizard.metrics:metrics-core:$drpWizVer"
-        implementation "io.dropwizard.metrics:metrics-jmx:$drpWizVer"
+        implementation "io.dropwizard.metrics:metrics-core:$dropWizardVersion"
+        implementation "io.dropwizard.metrics:metrics-jmx:$dropWizardVersion"
         implementation "org.hdrhistogram:HdrHistogram:2.1.10"
         implementation("org.latencyutils:LatencyUtils:2.0.3") {
             exclude group: "org.hdrhistogram", module: '*'
@@ -485,8 +486,8 @@ project (':quasar-core') {
         provided "org.ow2.asm:asm-commons:$asmVersion"
         provided "org.ow2.asm:asm-util:$asmVersion"
 
-        implementation "com.esotericsoftware:kryo:4.0.2"
-        implementation "de.javakaffee:kryo-serializers:0.43"
+        implementation "com.esotericsoftware:kryo:$kryoVersion"
+        implementation "de.javakaffee:kryo-serializers:$kryoSerializersVersion"
 
         compileOnly 'org.osgi:osgi.annotation'
         compileOnly 'org.osgi:osgi.core'
@@ -744,17 +745,17 @@ project (':quasar-actors') {
     dependencies {
         provided project(path: ':quasar-core', configuration: 'classic')
         // compile 'org.mutabilitydetector:MutabilityDetector:0.9.2'
-        implementation "org.slf4j:slf4j-api:$slf4jVer"
-        implementation "net.bytebuddy:byte-buddy:1.9.2"
-        implementation ("com.google.guava:guava:$guavaVer") {
+        implementation "org.slf4j:slf4j-api:$slf4jVersion"
+        implementation "net.bytebuddy:byte-buddy:$byteBuddyVersion"
+        implementation ("com.google.guava:guava:$guavaVersion") {
             exclude group: 'com.google.errorprone', module: '*'
             exclude group: 'org.checkerframework', module: 'checker-qual'
         }
 
         testImplementation project(path: ':quasar-core', configuration: 'testArtifacts')
-        testRuntimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:2.11.1"
-        testRuntimeOnly "org.apache.logging.log4j:log4j-api:2.11.1"
-        testRuntimeOnly "org.apache.logging.log4j:log4j-core:2.11.1"
+        testRuntimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
+        testRuntimeOnly "org.apache.logging.log4j:log4j-api:$log4jVersion"
+        testRuntimeOnly "org.apache.logging.log4j:log4j-core:$log4jVersion"
         testRuntimeOnly "com.lmax:disruptor:3.4.2" // required for log4j
     }
 }
